WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
321786
[Site Isolation] `WebPage::potentialTapAtPosition` is missing a coordinate conversion
https://bugs.webkit.org/show_bug.cgi?id=321786
Summary
[Site Isolation] `WebPage::potentialTapAtPosition` is missing a coordinate co...
Richard Robinson
Reported
2026-08-14 04:56:28 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-08-14 04:56:35 PDT
<
rdar://problem/184910487
>
Richard Robinson
Comment 2
2026-08-14 04:57:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/71636
EWS
Comment 3
2026-08-14 11:04:06 PDT
Committed
319187@main
(df95afce02a3): <
https://commits.webkit.org/319187@main
> Reviewed commits have been landed. Closing PR #71636 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug