[Site Isolation] `WebPage::potentialTapAtPosition` is missing a coordinate conversion https://bugs.webkit.org/show_bug.cgi?id=321786 rdar://184910487

Reviewed by Tim Horton.

With remote frames, the coordinate conversion in `WebPage::potentialTapAtPosition` was incorrect
since it passed root view coordinates to `transformToRemoteFrameCoordinates`, which expects content
coordinates.

Fix by using the correct coordinate space.

* Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
(WebKit::WebPage::potentialTapAtPosition):

Canonical link: https://commits.webkit.org/319187@main